# cgdkg_artifact

./: .gitignore  CONTRIBUTORS.txt  Cargo.toml  Dockerfile  README.md
benches/: benchmarks_cd_dkg.rs  benchmarks_cgdkg.rs  benchmarks_grothdkg.rs
cd/: Cargo.toml
cd/src/: cg_encryption.rs  config.rs  constants.rs  errors.rs  hash_to_point.rs  interpolate.rs  lib.rs  nidkg_dealing.rs  nidkg_zk_share.rs  nizk_dleq.rs  public_coefficients.rs  random_oracle.rs  rng.rs  seed.rs  utils.rs
classgroup/: Cargo.toml
classgroup/src/: cg_encryption.rs  context.rs  key_pop_zk.rs  lib.rs  nidkg_dealing.rs  nidkg_zk_share.rs  nizk_dleq.rs  polynomial.rs  random_oracle.rs  utils.rs
classgroup/src/bls12381_serde/: ecp2_tests.rs  ecp_tests.rs
classgroup/supra-bicycl/: Cargo.toml  README.md  build.rs  build_script_data.json
classgroup/supra-bicycl/c_lib/: bicycl.hpp
classgroup/supra-bicycl/c_lib/bicycl/: CL_HSMqk.hpp  gmp_extras.inl  qfi.inl
classgroup/supra-bicycl/src/: ffi.in.rs
groth/: Cargo.toml
groth/src/: baby_giant.rs  bls12381_serde.rs  bls_signature.rs  chunked_elgamal.rs  key_pop_zk.rs  lib.rs  nidkg_dealing.rs  nidkg_zk_chunk.rs  nidkg_zk_share.rs  nizk_dleq.rs  public_coefficients.rs  random_oracle.rs  scalar.rs  scalar_bls12381.rs  test_utils.rs  threshold_signature.rs
groth/src/bls12381_serde/: fr_tests.rs
groth/tests/: sha256.rs
src/: main.rs
supra-bicycl/c_lib/: CMakeLists.txt  bicycl_c_global.h  file1.cpp  sized_types.cxx
supra-bicycl/c_lib/bicycl/: CL_HSM_utils.hpp  CL_HSM_utils.inl  CL_HSMqk.inl  gmp_extras.hpp  qfi.hpp  seclevel.hpp
supra-bicycl/src/: b_i_c_y_c_l.rs  lib.rs
supra-bicycl/src/b_i_c_y_c_l/: utils.rs
