[package]
name = "cd"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
arrayvec = "0.7.2"
hex = "0.4.2"
cpp_std = "0.1.1"
bicycl = {path = "../supra-bicycl" }
miracl_core_bls12381 = "4.1.2"
miracl_core_ed25519 = "0.2.0"
num-bigint = "0.4.0"
num-traits = "0.2.14"

rand = "0.8"
rand_chacha = "0.2.2"
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }
anyhow = "1.0.82"

[build-dependencies.ritual_build]
git = "https://github.com/rust-qt/ritual.git"
rev = "e2b9b40f1ff57743ae0f3bf3cca43ef84545fc85"
version = "0.3.0"

[dependencies.cpp_core]
git = "https://github.com/rust-qt/ritual.git"
rev = "e2b9b40f1ff57743ae0f3bf3cca43ef84545fc85"
version = "0.5.0"