[package]
name = "bicycl"
version = "0.1.0"
edition = "2021"

[dependencies]
cpp_std = "0.1.1"

[build-dependencies.ritual_build]
git = "https://github.com/rust-qt/ritual.git"
rev = "e2b9b40f1ff57743ae0f3bf3cca43ef84545fc85"
version = "0.3.0"

[dependencies.cpp_core]
git = "https://github.com/rust-qt/ritual.git"
rev = "e2b9b40f1ff57743ae0f3bf3cca43ef84545fc85"
version = "0.5.0"
